--- a/src/features/map/map.css
+++ b/src/features/map/map.css
@@ -1,8 +1,8 @@
 .Map {
-    position: 'absolute';
-    width: '800px';
-    height: '400x';
-    background-color: 'black';
-    border: '4px solid white';
-    margin: '10px auto';
+    position: absolute;
+    width: 800px;
+    height: 400px;
+    background-color: green;
+    border: 4px solid white;
+    margin: 10px auto;
 }
