--- a/src/features/map/map.css
+++ b/src/features/map/map.css
@@ -1,8 +1,29 @@
 .Map {
-    position: absolute;
+    position: relative;
     width: 800px;
     height: 400px;
-    background-color: green;
     border: 4px solid white;
-    margin: 10px auto;
+    top: 0px;
+    left: 0px;
+}
+
+.row {
+    display: flex;
+}
+
+.tile {
+    display: inline-flex;
+    background-color: green;
+}
+
+.grass {
+    background-color: green;
+}
+
+.rock {
+    background-image: url('/tiles/rock.png');
+}
+
+.tree {
+    background-image: url('/tiles/tree.png');
 }
