--- a/src/features/ControlPanel/ControlPanel.css
+++ b/src/features/ControlPanel/ControlPanel.css
@@ -1,9 +1,26 @@
 @import "../World/World.css";
 
 .ControlPanel {
-    height: var(--mapHeight);
-    width: 200px;
-    background-color: grey;
-    margin: 20px auto 20px 10px;
-    border: 4px solid white;
+  height: var(--mapHeight);
+  width: 200px;
+  background-color: grey;
+  margin: 20px auto 20px 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+#MainControl {
+  background-color: burlywood;
+  margin: 2px;
+}
+
+#MainControl:hover {
+  filter: brightness(80%);
+}
+
+.VariablePanel {
+  margin: 2px;
+  border: 4px solid burlywood;
+  justify-content: center;
+  flex: 1;
 }
