--- a/src/features/ControlPanel/ControlPanel.css
+++ b/src/features/ControlPanel/ControlPanel.css
@@ -10,10 +10,28 @@
 }
 
 #MainControl {
-  background-color: burlywood;
-  margin: 2px;
+  background-color: forestgreen;
+  border: 1px solid black;
+  margin: 1px;
+  width: 98px;
+  text-align: center;
+  padding: 5px;
+}
+
+#MainControlPlay {
+  background-color: forestgreen;
+  border: 1px solid black;
+  margin: 1px;
+  text-align: center;
+  width:198px;
+  padding: 5px;
+  text-transform: uppercase;
 }
 
 #MainControl:hover {
+  filter: brightness(80%);
+}
+
+#MainControlPlay:hover {
   filter: brightness(80%);
 }
