--- a/src/features/ControlPanel/VariablePanel/VariablePanel.css
+++ b/src/features/ControlPanel/VariablePanel/VariablePanel.css
@@ -1,27 +1,7 @@
 .VariablePanel {
-    margin: 2px;
-    border: 4px solid burlywood;
-    justify-content: center;
-    flex: 1;
-    overflow-y:scroll;
-  }
-  
-  .Terrain{
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .TerrainRow {
-    display: flex;
-    flex-direction: row;
-  }
-
-  .Monster{
-    display: flex;
-    flex-direction: column;
-  }
-
-  .MonsterRow {
-    display: flex;
-    flex-direction: row;
-  }
+  margin: 2px;
+  border: 4px solid saddlebrown;
+  justify-content: center;
+  flex: 1;
+  overflow-y: scroll;
+}
