Added interactive map size generation

--- a/src/features/ControlPanel/VariablePanel/EditPieces/EditPieces.css
+++ b/src/features/ControlPanel/VariablePanel/EditPieces/EditPieces.css
@@ -7,6 +7,10 @@
     padding: 5px;
 }
 
+#EditPieceButton:hover {
+  filter: brightness(80%);
+}
+
 .Monster {
     display: flex;
     flex-direction: column;
