--- a/src/features/ControlPanel/VariablePanel/EditMap/EditMap.css
+++ b/src/features/ControlPanel/VariablePanel/EditMap/EditMap.css
@@ -1,10 +1,22 @@
 .Terrain {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .TerrainRow {
-    display: flex;
-    flex-direction: row;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.TerrainRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.Selector {
+  display: inline-block;
+  height: 40px;
+  width:40px;
+  margin: 2px;
+}
+
+.Highlight {
+  outline: 2px solid red;
+}
