--- a/src/features/ControlPanel/VariablePanel/Gameplay/Gameplay.css
+++ b/src/features/ControlPanel/VariablePanel/Gameplay/Gameplay.css
@@ -5,10 +5,11 @@
 }
 
 .Picture {
-  width: 100px;
-  height: 100px;
+  width: 56px;
+  height: 56px;
   border: 1px solid black;
   margin: 2px;
+  background-image: url("../../../Player/playerSprites/portraits/Dragoon.png")
 }
 
 .PlusMinus {
