--- a/src/features/Player/Player.css
+++ b/src/features/Player/Player.css
@@ -1,7 +1,7 @@
 .Player {
   position: absolute;
   /* background-image: url("player_walk.png"); */
-  background-image: url("playerSprites/HolyDragoon.png");
+  background-image: url("playerSprites/Druid.png");
   height:32px;
   width:32px;
   margin:4px;
