--- a/src/features/ControlPanel/VariablePanel/EditPieces/EditPieces.css
+++ b/src/features/ControlPanel/VariablePanel/EditPieces/EditPieces.css
@@ -1,10 +1,10 @@
 #EditPieceButton {
-    background-color: forestgreen;
-    border: 1px solid black;
-    margin: 1px;
-    width: 87px;
-    text-align: center;
-    padding: 5px;
+  background-color: forestgreen;
+  border: 1px solid black;
+  margin: 1px;
+  width: 87px;
+  text-align: center;
+  padding: 5px;
 }
 
 #EditPieceButton:hover {
@@ -12,13 +12,42 @@
 }
 
 .Monster {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .MonsterRow {
-    display: flex;
-    flex-direction: row;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.MonsterRow {
+  display: flex;
+  flex-direction: row;
+}
+
+.CharacterSelector {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Selector {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  margin: 2px;
+}
+
+.Selector:hover {
+  filter: brightness(80%);
+}
+
+.row {
+  display: flex;
+}
+
+.character {
+  display: inline-flex;
+  outline: 1px solid black;
+}
+
+.Highlight {
+  outline: 2px solid red;
+}
