--- a/src/features/ControlPanel/VariablePanel/VariablePanel.css
+++ b/src/features/ControlPanel/VariablePanel/VariablePanel.css
@@ -1,6 +1,6 @@
 .VariablePanel {
-  margin: 2px;
-  border: 4px solid saddlebrown;
+  margin: 1px 2px 2px 2px;
+  outline: 2px solid saddlebrown;
   justify-content: center;
   flex: 1;
   overflow-y: scroll;
