Linked Gameplay panel with Character state

--- a/src/features/ControlPanel/VariablePanel/Gameplay/Gameplay.css
+++ b/src/features/ControlPanel/VariablePanel/Gameplay/Gameplay.css
@@ -9,7 +9,7 @@
   height: 56px;
   border: 1px solid black;
   margin: 2px;
-  background-image: url("../../../Player/playerSprites/portraits/Dragoon.png")
+  /* background-image: url("../../../Player/playerSprites/portraits/Dragoon.png") */
 }
 
 .PlusMinus {
