Updated Monster info panel

--- a/src/features/ControlPanel/ControlPanel.css
+++ b/src/features/ControlPanel/ControlPanel.css
@@ -35,6 +35,8 @@
   text-align: center;
   padding: 5px;
   text-transform: uppercase;
+  height: 26px;
+  max-width: 170px;
 }
 
 #MainControlButton:hover {
