Added counters to player and monster sprites

--- a/src/features/Player/Player.css
+++ b/src/features/Player/Player.css
@@ -16,3 +16,10 @@
   height: 56px;
   width: 56px;
 }
+
+.Counter {
+  position: relative;
+  z-index: 1;
+  color: azure;
+  text-shadow: 1px 1px black;
+}
